--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.resx
@@ -120,7 +120,7 @@
   <data name="Accept" xml:space="preserve">
     <value>Accept</value>
   </data>
-  <data name="ConnectionErrir" xml:space="preserve">
+  <data name="ConnectionError" xml:space="preserve">
     <value>Check the internet connection</value>
   </data>
   <data name="Error" xml:space="preserve">
