--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.ru-KZ.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.ru-KZ.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConnectionErrir" xml:space="preserve">
+  <data name="ConnectionError" xml:space="preserve">
     <value>Проверьте подключение к интернету</value>
   </data>
   <data name="Error" xml:space="preserve">
