--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.kk-KZ.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.kk-KZ.resx
@@ -126,4 +126,34 @@
   <data name="Accept" xml:space="preserve">
     <value>Қабылдау</value>
   </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Жүктелуде...</value>
+  </data>
+  <data name="SearchProduct" xml:space="preserve">
+    <value>Өнімді таңдаңыз</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Аты</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Сипаттама</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>Баға</value>
+  </data>
+  <data name="Category" xml:space="preserve">
+    <value>Санат</value>
+  </data>
+  <data name="IsStarred" xml:space="preserve">
+    <value>Жұлдызша қойылған</value>
+  </data>
+  <data name="AddToCart" xml:space="preserve">
+    <value>Дүкен арбасына қосу</value>
+  </data>
+  <data name="Product" xml:space="preserve">
+    <value>Өнім</value>
+  </data>
+  <data name="Products" xml:space="preserve">
+    <value>Өнімдер</value>
+  </data>
 </root>
