--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.kk-KZ.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.kk-KZ.resx
@@ -156,4 +156,16 @@
   <data name="Products" xml:space="preserve">
     <value>Өнімдер</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Кіру</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Өзгерту</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Показать историю покупок</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Показать корзину</value>
+  </data>
 </root>
