--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Accept" xml:space="preserve">
+	<data name="Accept" xml:space="preserve">
     <value>Accept</value>
   </data>
-  <data name="ConnectionError" xml:space="preserve">
+	<data name="ConnectionError" xml:space="preserve">
     <value>Check the internet connection</value>
   </data>
-  <data name="Error" xml:space="preserve">
+	<data name="Error" xml:space="preserve">
     <value>Error</value>
   </data>
 	<data name="Loading" xml:space="preserve">
@@ -155,5 +155,17 @@
   </data>
 	<data name="Products" xml:space="preserve">
     <value>Products</value>
+  </data>
+	<data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+	<data name="ModifyUser" xml:space="preserve">
+    <value>Modify user</value>
+  </data>
+	<data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Show purchase history</value>
+  </data>
+	<data name="ShowShoppingCar" xml:space="preserve">
+    <value>Show shopping car</value>
   </data>
 </root>
