--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.ru-KZ.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.ru-KZ.resx
@@ -156,4 +156,16 @@
   <data name="Products" xml:space="preserve">
     <value>Продукты</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Логин</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Изменить данные пользователя</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Журнал покупок</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Показывать корзину</value>
+  </data>
 </root>
