--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.ru.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.ru.resx
@@ -156,4 +156,16 @@
   <data name="Products" xml:space="preserve">
     <value>Товары</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Вход</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Изменение пользователя</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Показать историю покупок</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Показать корзину</value>
+  </data>
 </root>
