--- a/OnSale.Prism/OnSale.Prism/Resources/Resource.ru.resx
+++ b/OnSale.Prism/OnSale.Prism/Resources/Resource.ru.resx
@@ -168,4 +168,34 @@
   <data name="ShowShoppingCar" xml:space="preserve">
     <value>Показать корзину</value>
   </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="EmailPlaceHolder" xml:space="preserve">
+    <value>Введите свой адрес email</value>
+  </data>
+  <data name="EmailError" xml:space="preserve">
+    <value>Введите допустимый адрес электронной почты.</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Пароль:</value>
+  </data>
+  <data name="PasswordPlaceHolder" xml:space="preserve">
+    <value>Введите пароль</value>
+  </data>
+  <data name="PasswordError" xml:space="preserve">
+    <value>Вы должны ввести свой пароль</value>
+  </data>
+  <data name="ForgotPassword" xml:space="preserve">
+    <value>Забыли пароль?</value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>Регистрация нового пользователя</value>
+  </data>
+  <data name="LoginError" xml:space="preserve">
+    <value>Email или пароль не верны</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Выход</value>
+  </data>
 </root>
